unpackaged/objects/DealerSessao__c.object
<CustomObject>
    <fields>
        <fullName>DataEntrada__c</fullName>
        <label>Data Entrada</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataSaida__c</fullName>
        <label>Data Saida</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sessões Dealer</relationshipLabel>
        <relationshipName>Dealers_Sessao</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SessaoCaixa__c</fullName>
        <label>Sessao Caixa</label>
        <referenceTo>SessaoCaixa__c</referenceTo>
        <relationshipLabel>Sessões Dealer</relationshipLabel>
        <relationshipName>Dealers_Sessao</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ativo</fullName>
                </value>
                <value>
                    <fullName>Desativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValorTotalCapile__c</fullName>
        <label>Valor Total Capilé</label>
        <summarizedField>DealerMesa__c.ValorCapile__c</summarizedField>
        <summaryForeignKey>DealerMesa__c.DealerSessao__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Sessão Dealer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>SessaoCaixa__c</columns>
        <columns>Status__c</columns>
        <columns>DataEntrada__c</columns>
        <columns>DataSaida__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>DS-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessões Dealer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>